# sls-ssh-docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  client.py  handler.py  install.sh  install2.sh  install_ubuntu.sh  notifier.py  process.py  pyproject.toml  run.sh  server.py  serverless.yml  service.py  ssh_server.py  test.py  tunnel.py  utils.py
scripts/: README.md  install.sh  run.sh
tests/: test_ssh_server.py
